# waychess

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  changelog.md  my_tables.h  output.txt
apps/: CMakeLists.txt  evaluate.cpp  perft.cpp  perft_tree.cpp  print.cpp  puzzler.cpp  table_generator.cpp  waychess.cpp  whychess.cpp
lichess/: config.yml.waychess  config.yml.whychess
puzzles/: endgame500.csv  mate500.csv  mate5000.csv  material500.csv  middlegame500.csv  puzzlegrep.py
regression/: evaluate.sh  perft.sh  puzzler.sh  run_suite.sh
regression/tracking/: evaluate.ndjson  perft.ndjson  puzzler.ndjson
scripts/: pert-convert.sh  pert_convert.sh  play-game.sh
src/: CMakeLists.txt  bit_board.cpp  bit_board.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  config.hpp  hashmap.cpp  hashmap.hpp  hashtable.cpp  hashtable.hpp  jumping_pieces.cpp  jumping_pieces.hpp  knight.cpp  magic.hpp  pieces.hpp  position.hpp  random.hpp  version.hpp.in  waychess.cpp
src/details/: hash_map.hpp  hash_table.hpp  history_heuristic.hpp  km_table.hpp  pext_bitboard.cpp  pext_bitboard.hpp  prn_codes.hpp  pv_table.hpp  ram.cpp  ram.hpp  transposition_table.hpp
src/evaluation/: evaluate.hpp  evaluate_king_safety.hpp  evaluate_material.hpp  evaluate_pawn_structure.hpp  evaluate_piece_square.hpp  evaluate_raw_material.hpp  evaluation.hpp  game_phase.hpp  see.hpp
src/pieces/: bishop.cpp  bishop.hpp  jumping_pieces.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  pieces.cpp  pieces.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
src/pieces/details/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.hpp  queen.cpp  queen.hpp  rook.hpp
src/position/: attacks.hpp  bitboard.cpp  bitboard.hpp  evaluate.hpp  game_state.cpp  game_state.hpp  generate_moves.cpp  generate_moves.hpp  mailbox.cpp  mailbox.hpp  make_move.cpp  make_move.hpp  move.cpp  move.hpp  position.cpp  position.hpp  search.hpp  xrays.hpp  zobrist_hash.hpp
src/position/details/: evaluate.hpp  generate_moves.hpp  make_move.hpp  search.hpp  zobrist_hash.hpp
src/search/: algorithms.cpp  algorithms.hpp  search.cpp  search.hpp  search_minimax.hpp  search_negamax.hpp  search_quiescent.hpp  statistics.cpp  statistics.hpp  transposition_table.cpp  transposition_table.hpp
src/utility/: binary.cpp  binary.hpp  coordinates.cpp  coordinates.hpp  game.cpp  game.hpp  logging.cpp  logging.hpp  perft.cpp  perft.hpp  puzzle.cpp  puzzle.hpp  uci.cpp  uci.hpp
tests/: CMakeLists.txt  test_move_generation.cpp  test_pawn_structure.cpp  test_perft.cpp  test_positions.hpp  test_puzzles.cpp  test_unmake.cpp
tests/data/: lichess_db_puzzle.csv
